@@ -88,6 +88,7 @@ export("as.rwl",
        "ffcsaps",
        "fill.internal.NA",
        "gini.coef",
+       "glk.legacy",
        "glk",
        "hanning",
        "i.detrend",
@@ -129,6 +130,7 @@ export("as.rwl",
        "sens1",
        "sens2",
        "series.rwl.plot",
+       "sgc",
        "skel.plot",
        "spag.plot",
        "sss",
